# Chat

./: .gitignore  Cargo.toml  DEPLOY.md  README.md
deploy/: deploy.sh
deploy/nginx/: xrenmaster.conf
deploy/systemd/: chat.service
src/: main.rs
static/: app.js  index.html  styles.css
